--- a/src/content/IdentityProvider/Web/ClientApp/src/app/app.component.html
+++ b/src/content/IdentityProvider/Web/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<bs-navbar #nav>
+<bs-navbar [color]="colors.dark" #nav>
 	<bs-navbar-toggler *bsExpandButton="let state" [state]="state" [toggleOnClick]="false"></bs-navbar-toggler>
 	<bs-navbar-brand [routerLink]='["/"]'>
 		<span class="brand d-block p-1">
@@ -29,6 +29,6 @@
 		</bs-navbar-item>
 	</bs-navbar-nav>
 </bs-navbar>
-<div [navbarContent]="nav" style="padding-top:10px">
+<div [bsNavbarContent]="nav" style="padding-top:10px">
 	<router-outlet></router-outlet>
 </div>
