--- a/src/content/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
+++ b/src/content/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
@@ -1,68 +1,70 @@
 <body>
-	<form class="container" (submit)="verifyCode()">
-		<div class="row mb-3" *ngIf="(errorMessages$ | async) as errorMessages">
-			<div class="col-md-12">
-				<bs-alert *ngFor="let errorMessage of errorMessages" [type]="errorMessage.color" (afterOpenedOrClosed)="removeErrorMessage(errorMessage, $event)">
-					{{ errorMessage.message }}
-					<bs-alert-close></bs-alert-close>
-				</bs-alert>
+	<bs-form (submitted)="verifyCode()">
+		<bs-grid>
+			<div bsRow class="mb-3" *ngIf="(errorMessages$ | async) as errorMessages">
+				<div [bsColumn]="{ md: 12 }">
+					<bs-alert *ngFor="let errorMessage of errorMessages" [type]="errorMessage.color" (afterOpenedOrClosed)="removeErrorMessage(errorMessage, $event)">
+						{{ errorMessage.message }}
+						<bs-alert-close></bs-alert-close>
+					</bs-alert>
+				</div>
 			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-12 text-center">
-				<label class="col-form-label" [bsFor]="txtverificationcode">Open your authenticator app and generate a code for MintPlayer.AspNetCore.IdentityServer in the box below:</label>
+			<div bsRow class="mb-3">
+				<div [bsColumn]="{ md: 12 }" class="text-center">
+					<label bsColFormLabel" [bsFor]="txtverificationcode">Open your authenticator app and generate a code for MintPlayer.AspNetCore.IdentityServer in the box below:</label>
+				</div>
 			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-12">
-				<input type="text" [(ngModel)]="verificationCode" name="verificationCode" #txtverificationcode autofocus autocomplete="off" class="form-control" />
+			<div bsRow class="mb-3">
+				<div [bsColumn]="{ md: 12 }">
+					<input type="text" [(ngModel)]="verificationCode" name="verificationCode" #txtverificationcode autofocus autocomplete="off" />
+				</div>
 			</div>
-		</div>
-		<div class="row mb-3">
-			<div class="col-md-12 text-center">
-				<label>
-					<input type="checkbox" [(ngModel)]="remember" name="remember" #chkremember />
-					Remeber this device
-				</label>
+			<div bsRow class="mb-3">
+				<div [bsColumn]="{ md: 12 }" class="text-center">
+					<label>
+						<input type="checkbox" [(ngModel)]="remember" name="remember" #chkremember />
+						Remeber this device
+					</label>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<span class="btn-group">
-					<button type="submit" class="btn btn-primary">Login</button>
-					<button class="btn btn-secondary" (click)="OnLostDevice()">Lost device?</button>
-				</span>
+			<div bsRow>
+				<div [bsColumn]="{ md: 12 }" class="text-center">
+					<bs-button-group>
+						<button type="submit" [color]="colors.primary">Login</button>
+						<button [color]="colors.secondary" (click)="OnLostDevice()">Lost device?</button>
+					</bs-button-group>
+				</div>
 			</div>
-		</div>
-	</form>
+		</bs-grid>
+	</bs-form>
 	<bs-modal [(isOpen)]="isRequestingRecoveryCode">
-		<form *bsModal cdkTrapFocus (submit)="recoveryCodeEntered()">
+		<bs-form *bsModal cdkTrapFocus (submitted)="recoveryCodeEntered()">
 			<div bsModalHeader>
 				<h5 class="modal-title">2FA Recovery</h5>
 			</div>
 			<div bsModalBody class="p-2 d-flex flex-row align-items-center justify-content-between">
-				<div class="container">
-					<div class="form-group row mb-3">
-						<div [bsFor]="txtRecoveryCode" class="col-md-12 col-form-label">
+				<bs-grid>
+					<div bsRow bsFormGroup class="mb-3">
+						<div [bsFor]="txtRecoveryCode" [bsColumn]="{ md: 12 }" bsColFormLabel>
 							Consult the recovery codes you've written down when activating 2-factor authentication. Enter a recovery code in the box below.
 						</div>
 					</div>
-					<div class="form-group row mb-3">
-						<div class="col-md-12">
-							<input type="text" [(ngModel)]="twoFactorRecoveryCode" autofocus #txtRecoveryCode name="txtRecoveryCode" class="form-control">
+					<div bsRow bsFormGroup class="mb-3">
+						<div [bsColumn]="{ md: 12 }">
+							<input type="text" [(ngModel)]="twoFactorRecoveryCode" autofocus #txtRecoveryCode name="txtRecoveryCode">
 						</div>
 					</div>
-				</div>
+				</bs-grid>
 			</div>
 			<div bsModalFooter>
-				<div class="btn-group">
-					<button type="submit" class="btn btn-primary" aria-label="Update password">
+				<bs-button-group>
+					<button type="submit" [color]="colors.primary" aria-label="Recover account">
 						<i class="fa fa-unlock"></i>
 						Recover account
 					</button>
-					<button type="button" bsModalClose class="btn btn-secondary" aria-label="Cancel">Cancel</button>
-				</div>
+					<button type="button" bsModalClose [color]="colors.secondary" aria-label="Cancel">Cancel</button>
+				</bs-button-group>
 			</div>
-		</form>
+		</bs-form>
 	</bs-modal>
 </body>
