--- a/src/content/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
+++ b/src/content/IdentityProvider/Web/ClientApp/src/app/pages/account/two-factor/two-factor.component.html
@@ -11,7 +11,7 @@
 			</div>
 			<div bsRow class="mb-3">
 				<div [bsColumn]="{ md: 12 }" class="text-center">
-					<label bsColFormLabel" [bsFor]="txtverificationcode">Open your authenticator app and generate a code for MintPlayer.AspNetCore.IdentityServer in the box below:</label>
+					<label bsColFormLabel [bsFor]="txtverificationcode">Open your authenticator app and generate a code for MintPlayer.AspNetCore.IdentityServer in the box below:</label>
 				</div>
 			</div>
 			<div bsRow class="mb-3">
