--- a/src/content/Application/Web/ClientApp/src/app/app.component.html
+++ b/src/content/Application/Web/ClientApp/src/app/app.component.html
@@ -7,7 +7,7 @@
 	</bs-navbar-brand>
 	<bs-navbar-nav [collapse]="true">
 		<bs-navbar-item>
-			<a [routerLink]='["/"]'>Home</a>
+			<a [routerLink]='["/"]'>{{ 'welcome' | translate }}</a>
 		</bs-navbar-item>
 		<bs-navbar-item>
 			<a [routerLink]='[]'>Information</a>
