--- a/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/src/app/app.component.html
+++ b/src/content/ServerSideRendering/MintPlayer.AspNetCore.ServerSideRendering/ClientApp/src/app/app.component.html
@@ -18,5 +18,7 @@
 	</bs-navbar-nav>
 </bs-navbar>
 <div [bsNavbarContent]="nav" style="padding-top:10px">
-	<router-outlet></router-outlet>
+	<div class="p-3">
+		<router-outlet></router-outlet>
+	</div>
 </div>
