--- a/src/content/Application/Web/ClientApp/src/app/pages/home/home.component.html
+++ b/src/content/Application/Web/ClientApp/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <p>home works!</p>
-<!--#if (UsePwa && UseServerSideRendering) -->
+<!--#if (UsePwa && !SsrNone) -->
 <p>
 	You are using both a PWA and Server-side rendering.
 	To view the server-side rendered HTML from <b>View source</b> correctly,
